2006-11-24  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Event.h, EvPack.h, EvPack.cc: introduce 'global
	address'---unique object address as composition
	of hostid, pid adn local address;

	* NetTransport.h, NetTransport.cc, EvManager.h, EvManager.cc:
	rewritten scheme of mapping between internal and external
	addresses and message routing logic.
	
	* Names.cc, Names.h, EDSEv.h: return gloabal addresses
	list, addresses not associated with communication channel;
	remove obsolete NS requests/responses;

	* _EventHandler.cc, EventHandler.h: object can return
	own global id.
	
	* Makefile.inc: _EvSession.cc and _SessionMgr.cc removed
	from compilation; library version 4.2.0

2006-10-12  Petr Ovtchenkov  <ptr@island.corbina.net>

	* NetTransport.h, NetTransport.cc: remove make_map,
	it useless and even dangerous in practice.

	* EvManager.h, EventHandler.h, _EventHandler.cc:
	allow change announce of object's info; return
	string object instead of const reference from
	annotate by safety reasons.

2006-10-10  Petr Ovtchenkov  <ptr@island.corbina.net>

	* NetTransport.h, EventHandler.h, EvManager.h: remove
	SessionMgr---it not used anyway. This functionality
	should be reimplemented in different manner.

	* _EventHandler.cc, NetTransport.cc, EvManager.cc: ditto.

2006-10-06  Petr Ovtchenkov  <ptr@island.corbina.net>

	* NetTransport.h, NetTransport.cc: move make_map
	from NetTransportMgr to NetTransport_base, it
	useful for any net transport.

2006-10-04  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvPack.cc: erase target string in any case---length of string
	may be indeed 0.

	* Names.h, Names.cc: add one-message report about ns records

	* EDSEv.h: provide defines for one-message report about ns records

2006-10-03  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Names.h, Names.cc: localize heap locking---no wait in
	the Send call [use temporary container instead]; get_by_name
	return sequence of name entries too, as get_list, not single record.
